--- a/all/html/移动端/h5-2/css/index.less
+++ b/all/html/移动端/h5-2/css/index.less
@@ -173,8 +173,83 @@ nav{
     margin: 0 4px;
     display: flex;
     flex-wrap:wrap;
+    padding: 5px 0;
     li{
         // flex可以设置百分比
         flex: 20%;
+        a{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .subnav-entry-icon{
+                width: 28px;
+                height: 28px;
+                background-color: pink;
+                margin-top: 4px;
+                background: url(../images/subnav-bg.png) no-repeat;
+                background-size: 28px auto;
+            }
+        }
+    }
+}
+
+.sales-box{
+    background-color: #fff;
+    border-top: 1px solid #aaa;
+    margin:  4px ;
+    .sales-hd{
+        height: 44px;
+        border-bottom: 1px solid #ccc;
+        position: relative;
+        h2{
+            text-indent: -999px;
+            overflow: hidden;
+            position: relative;
+            &::after{
+                position: absolute;
+                top: 8px;
+                left: 20px;
+                content: '';
+                width: 79px;
+                height: 15px;
+                background: url(../images/hot.png) no-repeat 0 -20px;
+                background-size: 79px auto;
+            }
+        }
+        a{
+            position: absolute;
+            top: 0px;
+            right: 5px;
+            background: -webkit-linear-gradient(left,#ff506c,#ff6bc6);
+            border-radius:15px;
+            padding: 3px 20px 3px 10px;
+            color: #fff;
+            &::after{
+                content: "";
+                position: absolute;
+                top: 9px;
+                right: 9px;
+                width: 7px;
+                height: 7px;
+                border-top: 2px solid #fff;
+                border-right: 2px solid #fff;
+                transform: rotate(45deg);
+            }
+        }
+    }
+    .sales-bd{
+        .row{
+            display: flex;
+            a{
+                flex: 1;
+                border-bottom: 1px solid #eee;
+                &:nth-child(1){
+                    border-right: solid 1px #eee;
+                }
+                img{
+                    width: 100%;
+                }
+            }
+        }
     }
 }
